About to ship v1.0 - few things to do but shippable - cleaned up resources add a game icon

--- a/SpaceRogueRevolution/GameResource.resx
+++ b/SpaceRogueRevolution/GameResource.resx
@@ -119,15 +119,16 @@
   </resheader>
   <data name="GameLooseText" xml:space="preserve">
     <value>Resources have been all used up -  ships been abandoned!!!!</value>
+    <comment>Not used</comment>
   </data>
   <data name="GameWinText" xml:space="preserve">
-    <value>You won have become a great trader in the galaxy well done</value>
+    <value>You earned enought to retire thats it, put your feet up and relax - hard life earning a buck in the galaxy is over - you have won!!!</value>
   </data>
   <data name="HelpText" xml:space="preserve">
     <value>To move the spaceship used W,A,S,D for directions. Click on a planet for details. When you arrive at a planet you will auto dock and if you want to pickup a job use the numbers [0-9] to select your job. Then head to the planet for the jobs destination. You can refuel by the [R] key and you can buy food using the [F] key.</value>
   </data>
   <data name="IntroGameText" xml:space="preserve">
-    <value>Welcome to the galaxy, You are the captain of the dart. Travel to different planets to pickup jobs and collect money. If you 
-              have more than 100 million credits you win. Its that simple..</value>
+    <value>Welcome to the galaxy, You are the captain of the dart - a small rugged spaceship. It's a  tough Galaxy to survivve in but there are good jobs and bad jobs and if you can pick up the right one - who knows you might just succeed. Of course the real money comes on the Big Jobs and these are the ones that will get you the glory but sometimes they don't end up so well but then... ".cause sometimes "you get that on these big jobs!!!". Travel to different planets to pickup jobs and collect money for the job. If you 
+have more than 5000 credits you have earned enough to retire and win the game. It's that simple..</value>
   </data>
 </root>
